# sage_ref

./: chat.rar  db.sqlite3  pyproject.toml
a_rtchat/: models.py  views.py
a_rtchat/migrations/: 0001_initial.py
kernel/: asgi.py  settings.py  urls.py
sage_ref/: apps.py  routing.py  urls.py
sage_ref/admin/: __init__.py  message.py  room.py
sage_ref/helpers/: enums.py
sage_ref/migrations/: 0001_initial.py  0002_chatmessage_session_key_alter_chatmessage_author.py  0003_alter_agent_user.py  0004_room_agent.py
sage_ref/models/: __init__.py  agent.py  chat.py  room.py
sage_ref/service/: con2.py  consumer.py
sage_ref/templates/: agent.html  agent_chat.html  agent_info.html  c.html  chat.html  client_info.html  t.html  type_agent.html  typing.html
sage_ref/views/: __init__.py  agent.py  room.py
