[tool.poetry]
name = "sage-ref"
version = "0.1.0"
description = ""
authors = ["radinceorc <radin.ceorc77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
channels = "^4.1.0"
channels-redis = "^4.2.0"
pillow = "^11.0.0"
daphne = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
